nagstamon (1.0.2) stable; urgency=low

  * New upstream
   - fixed: if selected display for fullscreen mode is not present, switch back to display number 0

 -- Bernd Waibel <bwaibel@intarsys.de>

nagstamon (1.0.1) stable; urgency=low

  * New upstream
   - added option to disable system keyring storage to prevent crashes
   - reverted default sorting order to "Descending"
   - fixed too narrow fullscreen display
   - fixed vanishing Nagstamon submenu in Ubuntu Appindicator

 -- Henri Wahl <h.wahl@ifw-dresden.de>  Mon, 22 Sep 2014 9:00:00 +0200

nagstamon (1.0) stable; urgency=low

  * New upstream
   - added custom event notification with custom commands
   - added highlighting of new events
   - added storage of passwords in OS keyring
   - added optional tooltip for full status information
   - added support for applying custom actions to specific monitor only
   - added copy buttons for servers and actions dialogs
   - added stopping notification if event already vanished
   - added support for Op5Monitor 6.3 instead of Ninja
   - added experimental Zabbix support
   - added automatic refreshing after acknowledging
   - added permanent hamburger menu
   - unified layout of dialogs
   - various Check_MK improvements
   - fixed old regression not-staying-on-top-bug
   - fixed Check_MK-Recheck-DOS-bug
   - fixed pop window size calculation on multiple screens
   - fixed following popup window on multiple screens
   - fixed hiding dialogs in MacOSX
   - fixed ugly statusbar font in MacOSX
   - fixed use of changed colors
   - fixed non-ascending default sort order
   - fixed Opsview downtime dialog
   - fixed sometimes not working context menu
   - fixed some GUI glitches
   - fixed password saving bug
   - fixed Centreon language inconsistencies
   - fixed regression Umlaut bug

 -- Henri Wahl <h.wahl@ifw-dresden.de>  Mon, 28 Jul 2014 09:30:00 +0200

nagstamon (1.0rc2) unstable; urgency=low

  * New upstream
   - added automatic refreshing after acknowledging